# rust_journalctl

./: Cargo.toml  README.md
src/: main.rs
src/app/: app.rs
src/models/: boot_info.rs  log_entry.rs  message.rs  mod.rs
