[package]
name = "rust_journalctl"
version = "0.1.0"
edition = "2024"

[dependencies]
#iced = { version = "0.13.1", features = ["application", "tokio"] }
iced = { version = "0.14.0", features = ["tokio", "advanced"] }
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
